--- a/paimon-spark/paimon-spark-4.0/pom.xml
+++ b/paimon-spark/paimon-spark-4.0/pom.xml
@@ -43,7 +43,7 @@ under the License.
 
         <dependency>
             <groupId>org.apache.paimon</groupId>
-            <artifactId>paimon-spark4-common</artifactId>
+            <artifactId>paimon-spark4-common_${scala.binary.version}</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -143,7 +143,7 @@ under the License.
                             </filters>
                             <artifactSet>
                                 <includes combine.children="append">
-                                     <include>org.apache.paimon:paimon-spark4-common</include>
+                                     <include>org.apache.paimon:paimon-spark4-common_${scala.binary.version}</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
