--- a/.github/workflows/utitcase-spark-3.x.yml
+++ b/.github/workflows/utitcase-spark-3.x.yml
@@ -63,8 +63,10 @@ jobs:
           jvm_timezone=$(random_timezone)
           echo "JVM timezone is set to $jvm_timezone"
           test_modules=""
-          for suffix in ut 3.5_${{ matrix.scala_version }} 3.4_${{ matrix.scala_version }} 3.3_${{ matrix.scala_version }} 3.2_${{ matrix.scala_version }}; do
-          test_modules+="org.apache.paimon:paimon-spark-${suffix},"
+          for suffix in ut 3.5 3.4 3.3 3.2; do
+          test_modules+="org.apache.paimon:paimon-spark-${suffix}_${{ matrix.scala_version }},"
           done
           test_modules="${test_modules%,}"
           mvn -T 2C -B verify -pl "${test_modules}" -Duser.timezone=$jvm_timezone -Pscala-${{ matrix.scala_version }}
+        env:
+          MAVEN_OPTS: -Xmx4096m
