--- a/paimon-filesystems/paimon-hadoop-uber/pom.xml
+++ b/paimon-filesystems/paimon-hadoop-uber/pom.xml
@@ -191,17 +191,15 @@
                                 <filter>
                                     <artifact>*</artifact>
                                     <excludes>
+                                        <exclude>properties.dtd</exclude>
+                                        <exclude>PropertyList-1.0.dtd</exclude>
+                                        <!-- The contents of notice and license which will cause checker failed in Paimon
+                                            have been merged into META-INF/NOTICE and META-INF/LICENSE. -->
                                         <exclude>NOTICE</exclude>
-                                        <exclude>LICENSE</exclude>
-                                        <exclude>.gitkeep</exclude>
-                                        <exclude>mime.types</exclude>
-                                        <exclude>mozilla/**</exclude>
                                         <exclude>okhttp3/internal/publicsuffix/NOTICE</exclude>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                        <exclude>META-INF/*.tld</exclude>
-                                        <exclude>META-INF/maven/**/pom.xml</exclude>
+                                        <exclude>LICENSE</exclude>
+                                        <exclude>mozilla/**</exclude>
+                                        <exclude>META-INF/maven</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
